cluster/apps/monitoring/prometheus/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-deployment
  namespace: monitoring
  labels:
    app: prometheus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
        - name: prometheus
          image: prom/prometheus:v2.47.0
          args:
            - --config.file=/etc/prometheus/prometheus.yml
            - --storage.tsdb.path=/prometheus/
          ports:
            - name: web
              containerPort: 9090
          volumeMounts:
            - mountPath: /etc/prometheus
              name: config-volume
            - mountPath: /prometheus/
              name: prometheus-data-volume
      volumes:
        - name: config-volume
          configmap:
            name: prometheus-conf
        - name: prometheus-data-volume
          persistentVolumeClaim:
            claimName: prometheus-data-claim
